<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".LinearLayoutActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="108dp"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_empid"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/empid" />

                <TextView
                    android:id="@+id/textView_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/textView_email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/textView_gender"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/gender" />

                <TextView
                    android:id="@+id/textView_aCode"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/aCode" />

                <TextView
                    android:id="@+id/textView_cCode"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/cCode" />

                <TextView
                    android:id="@+id/textView_dept"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/dept" />

                <TextView
                    android:id="@+id/textView_agToTerm"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/agToTerm" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:hapticFeedbackEnabled="true"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText_empid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/editText_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="textEmailAddress" />

                <RadioGroup
                    android:id="@+id/radioGroup_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>

                <EditText
                    android:id="@+id/editText_aCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:inputType="numberPassword" />

                <EditText
                    android:id="@+id/editText_cCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:ems="10"
                    android:inputType="numberPassword" />

                <Spinner
                    android:id="@+id/spinner_dept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="33dp" />

                <CheckBox
                    android:id="@+id/checkBox_agToTerm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="31dp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:text="@string/button_reset"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:text="@string/button_register"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_linearlayout"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_weight="1"
                android:text="Linear\nLayout"
                android:textAllCaps="false"
                android:textColor="#32BEA4" />

            <Button
                android:id="@+id/button_relative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Table\nLayout"
                android:textAllCaps="false"
                android:textColor="#32BEA4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Button" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>